--- a/map-filter-reduce.html
+++ b/map-filter-reduce.html
@@ -3,26 +3,62 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Map, Filter, Reduce Mini-Exercises</title>
+	<style>
+		main {
+			text-align: center;
+		}
+		section {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			margin: 0 auto;
+		}
+		p {
+			text-indent: 3em;
+		}
+	</style>
 </head>
 <body>
-<h1>Functional Methods</h1>
+	<main>
+		<h1>Functional Methods</h1>
+			<h2>The Exercises are in the JS file. (:</h2>
+				<section>
+					<p>Halvah muffin bear claw ice cream chocolate cake caramels toffee jujubes muffin. Sweet roll icing jelly-o
+					         shortbread jelly beans oat cake marzipan donut. Biscuit dessert candy canes icing dessert caramels
+						apple pie. Cupcake marzipan icing pudding pastry marzipan candy canes lollipop cookie. Dessert tootsie
+						roll oat cake sesame snaps carrot cake. Candy canes tiramisu sesame snaps wafer jujubes marzipan.
+						Marshmallow soufflé jelly beans cake danish pudding. Fruitcake jujubes jelly jelly beans sugar plum carrot cake. Biscuit donut bear claw jelly-o ice cream macaroon jelly-o. Candy canes jujubes lollipop bear claw cheesecake gummi bears candy canes candy canes biscuit. Dragée macaroon liquorice pastry topping brownie. Cookie candy canes brownie pastry sweet roll cheesecake. Cupcake bear claw shortbread pastry pudding lollipop cookie.</p>
+					<p>Pudding jujubes lollipop jelly-o cake icing liquorice dessert macaroon. Bonbon bonbon jelly-o macaroon pie.
+					         Chocolate bar sesame snaps donut tootsie roll brownie cotton candy candy canes shortbread. Cake
+						cotton candy apple pie pudding cotton candy croissant bonbon halvah. Sweet liquorice macaroon tiramisu
+						muffin donut sugar plum donut. Chupa chups sugar plum biscuit tootsie roll powder candy canes lollipop
+						topping ice cream. Wafer lollipop chupa chups candy oat cake jujubes shortbread lollipop icing. Soufflé
+						chocolate bar fruitcake cotton candy oat cake gummies marshmallow. Cheesecake croissant jelly carrot cake sugar plum jelly oat cake tootsie roll cake. Caramels bonbon tootsie roll bear claw candy. Marshmallow chocolate bar dragée icing sugar plum chupa chups dragée icing carrot cake. Danish toffee muffin marzipan dessert brownie cookie.</p>
+					<p>Cheesecake lollipop tiramisu jelly donut donut chupa chups oat cake. Tiramisu tiramisu lemon drops marshmallow cookie candy caramels danish. Tiramisu sesame snaps chupa chups fruitcake marzipan sweet macaroon bonbon. Cupcake tootsie roll biscuit sweet roll cookie cupcake. Jujubes liquorice danish wafer croissant jelly croissant toffee dessert. Lollipop cheesecake lemon drops croissant pastry sugar plum danish chupa chups tart. Icing cake gingerbread pie tart jelly-o sesame snaps. Liquorice soufflé carrot cake powder jelly beans icing wafer. Gingerbread gummi bears chocolate cake jujubes ice cream powder muffin cake. Sugar plum cheesecake sugar plum gummi bears gummi bears jelly beans jujubes icing. Topping sweet roll wafer sesame snaps chocolate bar gummi bears cake tart. Candy candy tart topping dessert.</p>
+					<p>Soufflé pastry cake sugar plum liquorice tart cheesecake pastry dessert. Tootsie roll cookie cheesecake
+					         liquorice chocolate carrot cake. Dragée chocolate cake danish dragée jelly-o. Ice cream halvah icing
+						cheesecake dessert. Tart gummi bears jelly chocolate sweet gingerbread bear claw. Soufflé powder
+						marshmallow gingerbread gingerbread marshmallow marzipan donut. Soufflé sesame snaps croissant tootsie
+						roll pie pie sesame snaps lollipop chocolate. Sweet roll lollipop tootsie roll caramels gingerbread pie.
+						Carrot cake sweet roll tiramisu shortbread bear claw jelly tart. Cotton candy sesame snaps cake halvah pudding bear claw oat cake marshmallow macaroon. Bear claw dragée liquorice biscuit sweet roll tart. Muffin jelly tootsie roll powder pudding. Chupa chups gingerbread bear claw tiramisu croissant oat cake.</p>
+					<p>Sesame snaps cupcake icing dessert wafer donut gummi bears apple pie. Sweet roll dessert gummi bears
+					        lollipop icing topping cupcake shortbread powder. Marshmallow brownie jelly beans lemon drops apple
+						pie ice cream. Danish macaroon bear claw lemon drops powder carrot cake jelly beans. Oat cake cotton
+						candy sweet carrot cake tootsie roll. Bonbon oat cake pie toffee carrot cake biscuit cake. Chocolate bar
+						dragée biscuit cotton candy croissant sugar plum jelly dessert. Wafer dragée topping chupa chups brownie
+						tootsie roll gummies cookie. Jujubes sesame snaps muffin brownie cake chocolate cake. Carrot cake cake pastry macaroon shortbread. Candy biscuit candy muffin candy canes. Sweet cookie jujubes ice cream halvah chupa chups cookie chupa chups lemon drops. Apple pie gummies cupcake apple pie liquorice.</p>
+				</section>
+	</main>
 
-<main>
-	<section>
-		<h2></h2>
-		<ul id="myCats"></ul>
-	</section>
 	
-	<section>
-		<h2></h2>
-		<ul id="shortNamesCats"></ul>
-	</section>
-</main>
-
-
+<!--EXERCISE ANSWERS ARE IN THE JS FILE-->
 <script src="js/map-filter-reduce.js"></script>
+
+<!--THESE ARE JUST THE NOTES-->
+<section>
 <script>
 	"use strict";
+	
 	
 	//Exercise.
 	// Use .filter to create an array of user objects where each user object has at least 3 languages in the languages array.
@@ -328,5 +364,6 @@
 	// // // REDUCE
 	
 </script>
+</section>
 </body>
 </html>
