--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -208,9 +208,145 @@
 	
 	//toggle the squares from yellow to white
 	
+	// https://marked-meadow-provelone.glitch.me/
+	const glitchURL = 'https://marked-meadow-provelone.glitch.me/movies';
+	// const options = {
+	// 	method: 'POST',
+	// 	headers: {
+	// 		'Content-Type': 'application/json',
+	// 	},
+	// 	body: JSON.stringify(blogPost),
+	// };
+	const my_promise = fetch(glitchURL);
 	
+	my_promise.then(response => console.log(response));
+	my_promise.catch(error => console.log(error));
+	</script>
 	
-</script>
+<!--	"use strict";-->
+<!--	-->
+<!--	// VARS, ARRAY, AND OBJ-->
+<!--	const glitchMovies = 'https://future-cloudy-parsnip.glitch.me/movies';-->
+<!--	-->
+<!--	-->
+<!--	/**-->
+<!--	 * FUNCTIONS-->
+<!--	 */-->
+<!--// MOVIE-->
+<!--	function getMovies() {-->
+<!--		return fetch(glitchMovies).then((response) => response.json())-->
+<!--	}-->
+<!--	function simpleCard(movie){-->
+<!--		let output = `-->
+<!--            <div class="movie-card card">-->
+<!--                <div class="card-body m-3">-->
+<!--                    <div class="card-img-top">-->
+<!--<<<<<<< HEAD-->
+<!--                    <picture>-->
+<!--                        <img src="${movie.poster}" alt="Movie Poster" class="img-thumbnail">-->
+<!--                    </picture>-->
+<!--                    </div>-->
+<!--                    <ul class="list-group">-->
+<!--                        <li>Title: ${movie.title}</li>-->
+<!--                        <li>Rating: ${movie.rating}</li>-->
+<!--                        <li>Description: ${movie.plot}</li>-->
+<!--                        <li>Genre: ${movie.genre}</li>-->
+<!--                        <li>Year: ${movie.year}</li>-->
+<!--                        <li>Director: ${movie.director}</li>-->
+<!--                        <li>Actors/Actresses: ${movie.actors}</li>-->
+<!--                        <li>ID: ${movie.id}</li>-->
+<!--                    </ul>-->
+<!--=======-->
+<!--                        <img src="${movie.poster}" alt="Movie Poster">-->
+<!--                    </div>-->
+<!--                    Title: ${movie.title} <br>-->
+<!--                    Rating: ${movie.rating} <br>-->
+<!--                    Description: ${movie.plot} <br>-->
+<!--                    Genre: ${movie.genre}<br>-->
+<!--                    Year: ${movie.year}<br>-->
+<!--                    Director: ${movie.director}<br>-->
+<!--                    Actors/Actresses: ${movie.actors}<br>-->
+<!--                    ID: ${movie.id}<br>-->
+<!--&gt;>>>>>> main-->
+<!--                </div>-->
+<!--                <div class="card-footer">-->
+<!--                    <button>Delete</button>-->
+<!--                    <button class="edit-btn">Edit</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            -->
+<!--            ${addJSButtons()}-->
+<!--    `-->
+<!--		// console.log(output);-->
+<!--		return output;-->
+<!--	}-->
+<!--	-->
+<!--	// MODAL-->
+<!--	function addJSButtons(){-->
+<!--		return `-->
+<!--        <script>-->
+<!--            $('.edit-btn').click( () => {-->
+<!--<<<<<<< HEAD-->
+<!--                $('#edit-modal').css('display', 'inline');-->
+<!--=======-->
+<!--                $('#edit-modal').css('display', 'block');-->
+<!--&gt;>>>>>> main-->
+<!--            })-->
+<!--            -->
+<!--            $('.close-btn').click( () => {-->
+<!--                $('#edit-modal').css('display', 'none');-->
+<!--                console.log('click')-->
+<!--            })-->
+<!--            -->
+<!--	`-->
+<!--	}-->
+<!--	-->
+<!--	// FORM-->
+<!--	const movie = {-->
+<!--	title:  "Bambi",-->
+<!--	rating: "3"-->
+<!--	}-->
+<!--	const options = {-->
+<!--	method: "POST",-->
+<!--	headers: {-->
+<!--	'Content-Type': 'application/json',-->
+<!--	},-->
+<!--	body: JSON.stringify(movie),-->
+<!--	};-->
+<!--	const fetchMovies = () => {-->
+<!--	fetch(glitchMovies, options)-->
+<!--	.then((response) => console.log(response))-->
+<!--	.catch((reject) => console.log(reject));-->
+<!--	};-->
+<!--	=======-->
+<!--	-->
+<!--	-->
+<!--	-->
+<!--	// FORM-->
+<!--	-->
+<!--	-->
+<!--	-->
+<!--	>>>>>>> main-->
+<!--	/**-->
+<!--	* ACTIVATE-->
+<!--	*/-->
+<!--	getMovies().then( (movieList) => {-->
+<!--	let output = ''-->
+<!--	for (let i = 0; i < movieList.length; i++) {-->
+<!--	output += simpleCard(movieList[i]);-->
+<!--	}-->
+<!--	$('#movie-container').html(output);-->
+<!--	})-->
+<!--	<<<<<<< HEAD-->
+<!--	//...-->
+<!--	=======-->
+<!--	-->
+<!--	-->
+<!--	>>>>>>> main-->
+<!--	-->
+<!--	-->
+<!--	-->
+<!--	-->
 </section>
 </body>
 </html>
