--- a/practice/ajax-practice.html
+++ b/practice/ajax-practice.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
+	<!--	MOBILE-VIEW-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--	BOOTSTRAP5-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <div id="output-information">
@@ -62,7 +66,12 @@
 	let output_information = document.getElementById('output-information');
 	//THIS IS THE URL THE INFORMATION IS COMING FROM.
 	const movies_url = 'https://marked-meadow-provelone.glitch.me/movies';
-	const willBootStrapWorkStart = `<div class="card" style="width: 18rem;">`
+	
+	const willBootStrapWorkStart = `<div class="card d-flex text-center" style="width: 18rem;">`
+	const bootStrapCardTitle = `<h5 class="card-title">`
+	const theDetailsTag = `<details>`
+	const detailsEnd = `</details>`
+	const h5End = `</h5>`
 	const divEnd = `</div>`
 	
 	fetch(movies_url).then( (response) => {
@@ -81,16 +90,17 @@
 				// console.log( `${movie_title}` === "undefined"); // TRYING TO GET RID OF UNDEFINED.
 				// console.log(  Object.keys(movie) ); // TESTING .LENGTH, TO GET RID OF UNDEFINED.
 				//Object.keys(movie).length > 2 // TESTING IF STATEMENTS
-				if (`${movie_title}` !== "undefined") {
+				if (`${movie_title}` !== "undefined") { //DECIDED TO GO WITH THIS IF STATEMENT
 					output_information.innerHTML += `
 					${willBootStrapWorkStart}
-							Title:      ${movie_title}
+		${bootStrapCardTitle}Title:      ${movie_title} ${h5End}
 							Rating:		${movie_rating}
-							Year:		${movie_year}
+			${theDetailsTag}Year:		${movie_year}
 							Genre:		${movie_genre}
 							Director:	${movie_director}
 							Plot:		${movie_plot}
 							Actors:		${movie_actors}
+					${detailsEnd}
 					${divEnd}
 					`
 				}
