--- a/practice/ajax-practice.html
+++ b/practice/ajax-practice.html
@@ -9,8 +9,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<div id="output-information">
 
+
+<div id="output-information">
 </div>
 
 <!--<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">-->
@@ -67,16 +68,22 @@
 	//THIS IS THE URL THE INFORMATION IS COMING FROM.
 	const movies_url = 'https://marked-meadow-provelone.glitch.me/movies';
 	
-	const willBootStrapWorkStart = `<div class="card d-flex text-center" style="width: 18rem;">`
+	//THIS IS SO I COULD USE TEMPLATE LITERALS, BUT NOT SURE IF IT MAKES ANY DIFFERENCE.
+	const willBootStrapWorkStart = `<div class="card my-3 m-auto" style="max-width: 500px;">`
+	const cardDiv2 = `<div class="row g-0">`
+	const cardDiv3 = `<div class="col-md-4">`
+	const cardDiv4 = `<div class="col-md-8">`
+	const cardDiv5 = `<div class="card-body">`
 	const bootStrapCardTitle = `<h5 class="card-title">`
 	const theDetailsTag = `<details>`
 	const detailsEnd = `</details>`
 	const h5End = `</h5>`
 	const divEnd = `</div>`
+	const brTags = `<br>`
+	
 	
 	fetch(movies_url).then( (response) => {
 		response.json().then( (movies) => {
-			
 			
 			movies.forEach( (movie , index, idk)  => {
 				const movie_title    = movie.title   ;
@@ -87,20 +94,32 @@
 				const movie_director = movie.director;
 				const movie_plot     = movie.plot    ;
 				const movie_actors   = movie.actors  ;
+				//I WAS RUNNING INTO ISSUES WITH THE IMAGE SHOWING UP, SO I HAD TO PUT THE TAGS HERE.
+				const theImage = `<img src="${movie_image}" class="d-block w-100" alt="${movie_plot}">`
 				// console.log( `${movie_title}` === "undefined"); // TRYING TO GET RID OF UNDEFINED.
 				// console.log(  Object.keys(movie) ); // TESTING .LENGTH, TO GET RID OF UNDEFINED.
 				//Object.keys(movie).length > 2 // TESTING IF STATEMENTS
 				if (`${movie_title}` !== "undefined") { //DECIDED TO GO WITH THIS IF STATEMENT
 					output_information.innerHTML += `
 					${willBootStrapWorkStart}
+					${cardDiv2}
+					${cardDiv3}
+								 ${theImage}
+					${divEnd}
+					${cardDiv4}
+					${cardDiv5}
 		${bootStrapCardTitle}Title:      ${movie_title} ${h5End}
 							Rating:		${movie_rating}
-			${theDetailsTag}Year:		${movie_year}
-							Genre:		${movie_genre}
-							Director:	${movie_director}
-							Plot:		${movie_plot}
-							Actors:		${movie_actors}
+					${theDetailsTag}
+							Year:	 	${movie_year}     ${brTags}
+							Genre:	 	${movie_genre}    ${brTags}
+							Director:	${movie_director} ${brTags}
+							Plot:	 	${movie_plot}     ${brTags}
+							Actors:	 	${movie_actors}   ${brTags}
 					${detailsEnd}
+					${divEnd}
+					${divEnd}
+					${divEnd}
 					${divEnd}
 					`
 				}
