--- a/practice/ajax-practice.html
+++ b/practice/ajax-practice.html
@@ -58,6 +58,7 @@
 				// console.log( `${movie_title}` === "undefined"); // TRYING TO GET RID OF UNDEFINED.
 				// console.log(  Object.keys(movie) ); // TESTING .LENGTH, TO GET RID OF UNDEFINED.
 				//Object.keys(movie).length > 2 // TESTING IF STATEMENTS
+				//OBJECT LITERALS
 				if (`${movie_title}` !== "undefined") { //DECIDED TO GO WITH THIS IF STATEMENT
 					output_information.innerHTML += `
 					${willBootStrapWorkStart}
