--- a/es6.html
+++ b/es6.html
@@ -4,11 +4,118 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 </head>
+<style>
+	.white{
+		color: white;
+	}
+</style>
 <body>
 <div id="textArtExperiment">
 </div>
 	<script src="js/es6.js"></script>
+
+
+
+
 <script>
+	/*
+ * Complete the TODO items below
+ */
+	const users = [
+		{
+			name: 'zach',
+			email: 'zach@codeup.com',
+			languages: ['javascript', 'bash']
+		},
+		{
+			name: 'ryan',
+			email: 'ryan@codeup.com',
+			languages: ['clojure', 'javascript']
+		},
+		{
+			name: 'luis',
+			email: 'luis@codeup.com',
+			languages: ['java', 'scala', 'php']
+		},
+		{
+			name: 'fernando',
+			email: 'fernando@codeup.com',
+			languages: ['java', 'php', 'sql']
+		},
+		{
+			name: 'justin',
+			email: 'justin@codeup.com',
+			languages: ['html', 'css', 'javascript', 'php']
+		},
+		{
+			name: 'dennise',
+			email: 'dennise@email.com',
+			languages: ['html', 'css', 'javascript']
+		}
+	];
+	
+	// TODO: fill in your name and email and add some programming languages you know
+	// to the languages array
+	
+	
+	// TODO: replace the `var` keyword with `const`, then try to reassign a variable
+	// declared as `const`
+	const name = 'dennise';
+	const email = 'dennise@email.com';
+	const languages = ['html', 'css', 'javascript'];
+	
+	
+	// TODO: rewrite the object literal using object property shorthand
+	users.push(`${name}``${email}``${languages}`);
+	
+	// TODO: replace `var` with `let` in the following variable declarations
+	let emails = [];
+	let names = [];
+	
+	// TODO: rewrite the following using arrow functions
+	users.forEach((user) => {
+		return emails.push(`${email}`);
+	});
+	users.forEach((user) => {
+		return names.push(`${name}`);
+	});
+	
+	// TODO: replace `var` with `let` in the following declaration
+	let developers = [];
+	users.forEach(function(user) {
+		// TODO: rewrite the code below to use object destructuring assignment
+		//       note that you can also use destructuring assignment in the function
+		//       parameter definition
+		const name = user.name;
+		const email = user.email;
+		const languages = user.languages;
+		
+		// TODO: rewrite the assignment below to use template strings
+		developers.push(`${name}'s email is ${email}, ${name} knows ${languages}`);
+	});
+	
+	// TODO: Use `let` for the following variable
+	let listStart = '<ul>';
+	let lii = '<li>'
+	let eli = '</li>'
+	// TODO: rewrite the following loop to use a for..of loop
+	// developers.forEach(function (developer) {
+		for (developer of developers){
+			`${listStart}
+			${lii}${developer}${eli}`
+		// TODO: rewrite the assignment below to use template strings
+		// list += '<li>' + developer + '</li>';
+	}
+	list += '</ul>';
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	const textArtExperiment = document.getElementById('textArtExperiment');
 	setTimeout(() => textArtExperiment.innerHTML += 'J', 1000);
 	setTimeout(() => textArtExperiment.innerHTML += 'a', 1100);
@@ -30,12 +137,20 @@
 	setTimeout(() => textArtExperiment.innerHTML += 's', 2700);
 	setTimeout(() => textArtExperiment.innerHTML += 'e', 2800);
 	setTimeout(() => textArtExperiment.innerHTML += 's', 2900);
-	setTimeout(() => textArtExperiment.innerHTML += '<span>' + '_szfzdfsf' +
+	setTimeout(() => textArtExperiment.innerHTML += '<span class="white">' + '_' +
 			'</span>', 2900);
 	
 	
 	
-	const blink = document.getElementById().style.opacity = "0.5"
+	const white_blink = document.querySelectorAll('span');
+	white_blink.forEach((value, key, parent)=>{
+		if (key === 0){
+			setInterval(()=>{
+				white_blink.classList.toggle('.white')
+			}, 1000)
+		}
+	});
+	
 	// setInterval(function (){
 	// 	ops = (ops < 1) ? 1:0;
 	// 	blink.style.opacity=ops;
