--- a/weather_map.html
+++ b/weather_map.html
@@ -128,7 +128,7 @@ $(document).ready(function() {
 	</script>
 </body>
 </html>
-<!--//trial and errors ->-->
+<!--//trial and errors// CODE DUMP ;-; ->-->
 <!--//<div class="card text-dark bg-light mb-3" style="max-width: 18rem;">-->
 <!--// 		<div class="card-header">Header</div>-->
 <!--// 		<div class="card-body">-->
