--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -30,7 +30,8 @@
 	test
 </div>
 
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-3.4.0.js"></script>
 <!--put it above all script^^^^-->
 <script>
 	"use strict";
