--- a/konami.html
+++ b/konami.html
@@ -12,58 +12,153 @@
 	//https://www.tutorialspoint.com/in-javascript-how-to-empty-an-array
 	// !! key events fired in the following order: keydown->keypress->keyup !!
 	//The Konami Code: Up, Up, Down, Down, Left, Right, Left, Right, B, A ( ↑ ↑ ↓ ↓ ← → ← → B A )
-	var konamiCode = [38 ,38 ,40 ,40 ,37 ,39 ,37 ,39 ,66 ,65 ,13]
+	const konamiCode = [38 ,38 ,40 ,40 ,37 ,39 ,37 ,39 ,66 ,65 ,13]
 			// "3838404037393739666513";
-	
 	let konamiCodeTwo = []
+	const emptyArray = []
 			// new Array(7);
-	console.log(konamiCode)
+	// console.log(konamiCode)
 	$(document).keyup(function(event) {
-		console.log(event.keyCode);
-		
-		
+		// console.log(event.keyCode)
+		//TAKE CERTAIN KEYS AND PUSH TO ARRAY
+		function pushCertainKeys(array){
+			array.forEach((value, index, arrays)=>{
+				if (value === event.keyCode){
+					konamiCodeTwo.push(value);
+				}
+			})
+		}
+		console.log(konamiCodeTwo)
+		console.log(pushCertainKeys(konamiCode));
 	});
+	
+	// const keycode = event.keyCode; #
+	// const theKey = event.key; keyName
+	// console.log(event)
+	// if (event.keyCode === 38) {
+	// 	konamiCodeTwo.push(38)
+	// }
+	// if (konamiCodeTwo === konamiCode) {
+	// 		console.log("did this work?")
+	// 	}
+	// 	if (konamiCodeTwo.length > 10) {
+	// 		konamiCodeTwo = [];
+	// 	}
+	//create a function that takes certain keycodes and forms a new array.
+	//compare that array to konamiCode array.
+	//if they both match, the display will turn red.
+	//possibly a message if you try to run the event more than once.
+	// function konamiNumberCheck(){
+	// 	if (even.keyCode !== konamiCode){
+	// 		return konamiCodeTwo = [];
+	// 	} else if ()
+	// };
+	// const newArray = (array) =>{
+	// 	if (event.keyCode === 38){
+	// 		array.push(38);
+	// 	} else if (event.keyCode === 40) {
+	// 		array.push(40);
+	// 	}else if (event.keyCode === 37) {
+	// 		array.push(37);
+	// 	}else if (event.keyCode === 39) {
+	// 		array.push(39);
+	// 	}else if (event.keyCode === 66) {
+	// 		array.push(66);
+	// 	}else if (event.keyCode === 65) {
+	// 		array.push(65);
+	// 	}else if (event.keyCode === 13) {
+	// 		array.push(13);
+	// 	} else return konamiCodeTwo;
+	// }
+	// const arrayResetLength = (arrayName) => {
+	// 	if (arrayName.length > 10) {
+	// 		arrayName = [];
+	// 	}
+	// 	;
+	// }
+	//
+	// newArray(konamiCodeTwo);
+	// console.log(`${konamiCodeTwo} push numbers`)
+	//
+	// // console.log(`${keycode} is the keycode`)
+	// switch (event.keyCode) {
+	// 	case 38:
+	// 		konamiCodeTwo.push(38);
+	// 		break;
+	// 	case 38:
+	// 		konamiCodeTwo.push(38);
+	// 		break;
+	// 	case 40:
+	// 		konamiCodeTwo.push(40);
+	// 		break;
+	// 	case 40:
+	// 		konamiCodeTwo.push(40);
+	// 		break;
+	// 	case 37:
+	// 		konamiCodeTwo.push(37);
+	// 		break;
+	// 	case 39:
+	// 		konamiCodeTwo.push(39);
+	// 		break;
+	// 	case 37:
+	// 		konamiCodeTwo.push(37);
+	// 		break;
+	// 	case 39:
+	// 		konamiCodeTwo.push(39);
+	// 		break;
+	// 	case 66:
+	// 		konamiCodeTwo.push(66);
+	// 		break;
+	// 	case 65:
+	// 		konamiCodeTwo.push(65);
+	// 		break;
+	// 	case 13:
+	// 		konamiCodeTwo.push(13);
+	// 		break;
+	// }
+	// console.log(event)
+	// 	console.log(`${keycode} is the key code \n ${theKey} is the key.`);
 	
 	
 		//check if every number in the array is in the same index as the other array.
 	//if it is not in the array, reset the array.
 	
 	
-	// 	switch (event.keyCode) {
-	// 		case 38:
-	// 			konamiCodeTwo.push(38);
-	// 			break;
-	// 		case 38:
-	// 			konamiCodeTwo.push(38);
-	// 			break;
-	// 		case 40:
-	// 			konamiCodeTwo.push(40);
-	// 			break;
-	// 		case 40:
-	// 			konamiCodeTwo.push(40);
-	// 			break;
-	// 		case 37:
-	// 			konamiCodeTwo.push(37);
-	// 			break;
-	// 		case 39:
-	// 			konamiCodeTwo.push(39);
-	// 			break;
-	// 		case 37:
-	// 			konamiCodeTwo.push(37);
-	// 			break;
-	// 		case 39:
-	// 			konamiCodeTwo.push(39);
-	// 			break;
-	// 		case 66:
-	// 			konamiCodeTwo.push(66);
-	// 			break;
-	// 		case 65:
-	// 			konamiCodeTwo.push(65);
-	// 			break;
-	// 		case 13:
-	// 			konamiCodeTwo.push(13);
-	// 			break;
-	// 	}
+		// switch (event.keyCode) {
+		// 	case 38:
+		// 		konamiCodeTwo.push(38);
+		// 		break;
+		// 	case 38:
+		// 		konamiCodeTwo.push(38);
+		// 		break;
+		// 	case 40:
+		// 		konamiCodeTwo.push(40);
+		// 		break;
+		// 	case 40:
+		// 		konamiCodeTwo.push(40);
+		// 		break;
+		// 	case 37:
+		// 		konamiCodeTwo.push(37);
+		// 		break;
+		// 	case 39:
+		// 		konamiCodeTwo.push(39);
+		// 		break;
+		// 	case 37:
+		// 		konamiCodeTwo.push(37);
+		// 		break;
+		// 	case 39:
+		// 		konamiCodeTwo.push(39);
+		// 		break;
+		// 	case 66:
+		// 		konamiCodeTwo.push(66);
+		// 		break;
+		// 	case 65:
+		// 		konamiCodeTwo.push(65);
+		// 		break;
+		// 	case 13:
+		// 		konamiCodeTwo.push(13);
+		// 		break;
+		// }
 	//
 	// 	console.log("the length is:" + konamiCodeTwo.length)
 	// 	if (konamiCodeTwo.length > 11){
