--- a/konami.html
+++ b/konami.html
@@ -12,24 +12,67 @@
 	//https://www.tutorialspoint.com/in-javascript-how-to-empty-an-array
 	// !! key events fired in the following order: keydown->keypress->keyup !!
 	//The Konami Code: Up, Up, Down, Down, Left, Right, Left, Right, B, A ( ↑ ↑ ↓ ↓ ← → ← → B A )
-	const konamiCode = [38 ,38 ,40 ,40 ,37 ,39 ,37 ,39 ,66 ,65 ,13]
+	const konamiCode = [38 ,38 ,40 ,40 ,37 ,39 ,37 ,39 ,66 ,65 ,13];
 			// "3838404037393739666513";
-	let konamiCodeTwo = []
-	const emptyArray = []
+	let konamiCodeTwo = [];
+	
+	const ogArray = [68, 79, 71];
+	let emptyArray = [];
 			// new Array(7);
 	// console.log(konamiCode)
 	$(document).keyup(function(event) {
-		// console.log(event.keyCode)
+		console.log(event.keyCode)
 		//TAKE CERTAIN KEYS AND PUSH TO ARRAY
-		function pushCertainKeys(array){
-			array.forEach((value, index, arrays)=>{
-				if (value === event.keyCode){
-					konamiCodeTwo.push(value);
-				}
-			})
+		switch(event.keyCode) {
+			case 68:
+				console.log(emptyArray.push(68));
+				break;
+			case 79:
+				console.log(emptyArray.push(79));
+				break;
+			case 71:
+				console.log(emptyArray.push(71));
+				break;
 		}
-		console.log(konamiCodeTwo)
-		console.log(pushCertainKeys(konamiCode));
+		console.log(emptyArray)
+		let av = emptyArray.valueOf();
+		console.log(`this is the ${av}`);
+		console.log('this is the ' + ogArray[0])
+		if (ogArray[0] == emptyArray[0] &&
+				ogArray[1] == emptyArray[1]  &&
+				ogArray[2] == emptyArray[2] ) {
+			console.log('you did it.')
+		}
+		if (ogArray.length <= emptyArray.length) {
+			emptyArray = [];
+		}
+			// case 38: console.log("");
+			// break;
+			// case 38: console.log("");
+			// break;
+			// case 38: console.log("");
+			// break;
+			// case 38: console.log("");
+			// break;
+			// case 38: console.log("");
+			// break;
+			// case 38: console.log("");
+			// break;
+			// case 38: console.log("");
+			// break;
+			// case 38: console.log("");
+			// break;
+		
+		
+		// function pushCertainKeys(array){
+		// 	array.forEach((value, index, arrays)=>{
+		// 		if (value === event.keyCode){
+		// 			konamiCodeTwo.push(value);
+		// 		}
+		// 	})
+		// }
+		// console.log(konamiCodeTwo)
+		// console.log(pushCertainKeys(konamiCode));
 	});
 	
 	// const keycode = event.keyCode; #
