reviewing codeup exercises

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -70,7 +70,7 @@
 		{
 			"name": "Tacos La Cabaña",
 			"address": "12025 W Loop 1604 S, San Antonio, TX 78252",
-			"website": "https://www.facebook.com/Tacos-La-Caba%C3%B1a-723050221783049/?ref=page_internal"
+			"website": "https://www.facebook.com/Tacos-La-Cabana"
 		},
 		{"name": "Tacos La Cabaña", "address": "12025 W Loop 1604 S, San Antonio, TX 78252", "website": "n/a"},
 		{"name": "Tacos La Cabaña", "address": "12025 W Loop 1604 S, San Antonio, TX 78252", "website": "n/a"},
