--- a/weather_map.html
+++ b/weather_map.html
@@ -17,22 +17,23 @@
 
 </head>
 
-<body class="bg-light bg-gradient">
-	<header>
-		<h1 class="bg-primary text-light d-flex justify-content-center">Weather Map</h1>
+<body class="bg-gradient">
+
+	<header class="d-flex">
+		<h1 class="bg-primary text-light vw-100">Weather Map</h1>
 	</header>
 	<main>
 		<!--searchbar-->
-		<section class ="searchbarSection d-flex flex-column">
+		<section class ="searchbarSection">
 		<div><span id="user_display"></span></div>
-		<label class="text-center mb-2">Weather Map Search:</label>
+		<label class="text-center mb-2 col-12">Weather Map Search:</label>
 		<input type="text" id="user_input" placeholder="San Antonio, Texas"
-		       class="inputFind mb-3 text-center">
-		<button id="clickme" class="buttonFind mb-0">Search Area</button>
+		       class="inputFind mb-3 text-center col-12">
+		<button id="clickme" class="buttonFind mb-0 col-12">Search Area</button>
 		</section>
 		
 		<!-- holding weather boxes-->
-		<section id="allWeatherContaiers" class="allWeatherContaiers text-sm-center">
+		<section id="allWeatherContaiers" class="allWeatherContaiers text-sm-center d-flex">
 		<!--	      ^----$("#allWeatherContaiers").html(html);-->
 		</section>
 		<!--the map, it was difficult to center outside of bootstrap.-->
@@ -42,7 +43,7 @@
 <!--		icons?-->
 <!--		https://developer.mozilla.org/en-US/docs/Learn/Accessibility/HTML-->
 	</footer>
-	
+</div>
 	<!--bootstrap-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<!--jQuery-->
